refact: use Files.writeString